[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.15.0",
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "python-dotenv==1.0.1",
    "requests>=2.32.4",
]
